--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <script src='https://ajax.googleapis.com/ajax/libs/incrementaldom/0.5.1/incremental-dom.js'></script>
     <link href="https://fonts.googleapis.com/css?family=Rajdhani:300|Raleway" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/lodash@4/lodash.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/midimessage"></script>
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
