Add no devices state, colour rows, better style disconnected state.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,16 @@
                 Pair
               </button>
             </div>
-            <div id='devicesList'>
+            <div id='devicesList'></div>
+            <div id='emptyDevices'>
+              <div class='content'>
+                <p>
+                  No devices paired!
+                </p>
+                <p>
+                  Click Pair button to add a device.
+                </p>
+              </div>
             </div>
           </div>
         </main>
