--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <script src="https://unpkg.com/custom-context-menu@2.0.1/src/context-menu.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/midimessage"></script>
     <script src="https://cdn.jsdelivr.net/npm/jzz-midi-gm"></script>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/2.5.94/css/materialdesignicons.min.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="/index.css">
   </head>
   <body>
     <div class='App'>
@@ -19,9 +20,11 @@
             Use Bluetooth MIDI Instruments with Chrome.
           </p>
           <h4>Requirements</h4>
-          <li><a href='https://www.google.com/chrome/'>Google Chrome</a></li>
-          <li><a href='https://jazz-soft.net/download/Jazz-Plugin/'>JAZZ Plugin</a></li>
-          <li><a href='https://chrome.google.com/webstore/detail/jazz-midi/jhdoobfdaejmldnpihidjemjcbpfmbkm'>JAZZ-Midi Chrome Extension</a></li>
+          <ul>
+            <li><a href='https://www.google.com/chrome/'>Google Chrome</a></li>
+            <li><a href='https://jazz-soft.net/download/Jazz-Plugin/'>JAZZ Plugin</a></li>
+            <li><a href='https://chrome.google.com/webstore/detail/jazz-midi/jhdoobfdaejmldnpihidjemjcbpfmbkm'>JAZZ-Midi Chrome Extension</a></li>
+          </ul>
         </aside>
         <main>
           <div id='devices'>
@@ -47,6 +50,6 @@
         </main>
       </div>
     </div>
-    <script src='index.js'></script>
+    <script src='/index.js'></script>
   </body>
 </html>
