--- a/index.html
+++ b/index.html
@@ -49,6 +49,16 @@
           </div>
         </main>
       </div>
+      <footer>
+        <div class='signature'>
+          <a class='sigimg' href="http://unit.io">
+            <img src="/unitio-logo.png" alt="Unit.IO Logo" />
+          </a>
+          <div class='sigtext made-with'>Made with <span title='Random Emoji!' id='random-emoji'></span></div>
+          <a class='sigtext made-by' href="http://unit.io">by Unit.IO</a>
+          <div class='sigtext'><a href="https://github.com/timoxley/jazz-webbluetooth">Source <span class='mdi mdi-source-branch'></span></a></div>
+        </div>
+      </footer>
     </div>
     <script src='/index.js'></script>
   </body>
