--- a/index.html
+++ b/index.html
@@ -60,6 +60,6 @@
         </div>
       </footer>
     </div>
-    <script src='/index.js'></script>
+    <script src='/index.js' type="module"></script>
   </body>
 </html>
